java/src/com/structmap/webtransportfast/wtf_h.java


    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_priority(wtf_stream_t *stream, uint16_t priority)
     * }
     */
    public static int wtf_stream_set_priority(MemorySegment stream, short priority) {
        var mh$ = wtf_stream_set_priority.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_set_priority", stream, priority);
            }
            return (int)mh$.invokeExact(stream, priority);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_stream_set_receive_enabled {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_POINTER,
            wtf_h.C_BOOL
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_stream_set_receive_enabled");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_receive_enabled(wtf_stream_t *stream, bool enabled)
     * }
     */
    public static FunctionDescriptor wtf_stream_set_receive_enabled$descriptor() {
        return wtf_stream_set_receive_enabled.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_receive_enabled(wtf_stream_t *stream, bool enabled)
     * }
     */
    public static MethodHandle wtf_stream_set_receive_enabled$handle() {
        return wtf_stream_set_receive_enabled.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_receive_enabled(wtf_stream_t *stream, bool enabled)
     * }
     */
    public static MemorySegment wtf_stream_set_receive_enabled$address() {
        return wtf_stream_set_receive_enabled.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_stream_set_receive_enabled(wtf_stream_t *stream, bool enabled)
     * }
     */
    public static int wtf_stream_set_receive_enabled(MemorySegment stream, boolean enabled) {
        var mh$ = wtf_stream_set_receive_enabled.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_stream_set_receive_enabled", stream, enabled);
            }
            return (int)mh$.invokeExact(stream, enabled);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_session_find_stream_by_id {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_POINTER,
            wtf_h.C_POINTER,
            wtf_h.C_LONG_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_session_find_stream_by_id");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_stream_t *wtf_session_find_stream_by_id(wtf_session_t *session, uint64_t stream_id)
     * }
     */
    public static FunctionDescriptor wtf_session_find_stream_by_id$descriptor() {
        return wtf_session_find_stream_by_id.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_stream_t *wtf_session_find_stream_by_id(wtf_session_t *session, uint64_t stream_id)
     * }
     */
    public static MethodHandle wtf_session_find_stream_by_id$handle() {
        return wtf_session_find_stream_by_id.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_stream_t *wtf_session_find_stream_by_id(wtf_session_t *session, uint64_t stream_id)
     * }
     */
    public static MemorySegment wtf_session_find_stream_by_id$address() {
        return wtf_session_find_stream_by_id.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_stream_t *wtf_session_find_stream_by_id(wtf_session_t *session, uint64_t stream_id)
     * }
     */
    public static MemorySegment wtf_session_find_stream_by_id(MemorySegment session, long stream_id) {
        var mh$ = wtf_session_find_stream_by_id.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_session_find_stream_by_id", session, stream_id);
            }
            return (MemorySegment)mh$.invokeExact(session, stream_id);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_result_to_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_POINTER,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_result_to_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *wtf_result_to_string(wtf_result_t result)
     * }
     */
    public static FunctionDescriptor wtf_result_to_string$descriptor() {
        return wtf_result_to_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *wtf_result_to_string(wtf_result_t result)
     * }
     */
    public static MethodHandle wtf_result_to_string$handle() {
        return wtf_result_to_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *wtf_result_to_string(wtf_result_t result)
     * }
     */
    public static MemorySegment wtf_result_to_string$address() {
        return wtf_result_to_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *wtf_result_to_string(wtf_result_t result)
     * }
     */
    public static MemorySegment wtf_result_to_string(int result) {
        var mh$ = wtf_result_to_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_result_to_string", result);
            }
            return (MemorySegment)mh$.invokeExact(result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_webtransport_error_to_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_POINTER,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_webtransport_error_to_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *wtf_webtransport_error_to_string(uint32_t error_code)
     * }
     */
    public static FunctionDescriptor wtf_webtransport_error_to_string$descriptor() {
        return wtf_webtransport_error_to_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *wtf_webtransport_error_to_string(uint32_t error_code)
     * }
     */
    public static MethodHandle wtf_webtransport_error_to_string$handle() {
        return wtf_webtransport_error_to_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *wtf_webtransport_error_to_string(uint32_t error_code)
     * }
     */
    public static MemorySegment wtf_webtransport_error_to_string$address() {
        return wtf_webtransport_error_to_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *wtf_webtransport_error_to_string(uint32_t error_code)
     * }
     */
    public static MemorySegment wtf_webtransport_error_to_string(int error_code) {
        var mh$ = wtf_webtransport_error_to_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_webtransport_error_to_string", error_code);
            }
            return (MemorySegment)mh$.invokeExact(error_code);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_get_error_details {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_INT,
            wtf_h.C_INT,
            wtf_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_get_error_details");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * wtf_result_t wtf_get_error_details(uint32_t error_code, wtf_error_details_t *details)
     * }
     */
    public static FunctionDescriptor wtf_get_error_details$descriptor() {
        return wtf_get_error_details.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * wtf_result_t wtf_get_error_details(uint32_t error_code, wtf_error_details_t *details)
     * }
     */
    public static MethodHandle wtf_get_error_details$handle() {
        return wtf_get_error_details.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * wtf_result_t wtf_get_error_details(uint32_t error_code, wtf_error_details_t *details)
     * }
     */
    public static MemorySegment wtf_get_error_details$address() {
        return wtf_get_error_details.ADDR;
    }

    /**
     * {@snippet lang=c :
     * wtf_result_t wtf_get_error_details(uint32_t error_code, wtf_error_details_t *details)
     * }
     */
    public static int wtf_get_error_details(int error_code, MemorySegment details) {
        var mh$ = wtf_get_error_details.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wtf_get_error_details", error_code, details);
            }
            return (int)mh$.invokeExact(error_code, details);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wtf_is_valid_application_error {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            wtf_h.C_BOOL,
            wtf_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("wtf_is_valid_application_error");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool wtf_is_valid_application_error(uint32_t error_code)
     * }
     */
    public static FunctionDescriptor wtf_is_valid_application_error$descriptor() {
        return wtf_is_valid_application_error.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool wtf_is_valid_application_error(uint32_t error_code)
     * }
     */
    public static MethodHandle wtf_is_valid_application_error$handle() {
        return wtf_is_valid_application_error.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool wtf_is_valid_application_error(uint32_t error_code)
     * }
     */
    public static MemorySegment wtf_is_valid_application_error$address() {
        return wtf_is_valid_application_error.ADDR;
    }
